# code_agent

./: README.md  demo_minimal.py  minimal_agent.py  pyproject.toml  requirements.txt
agent/: __init__.py  llm.py  react_agent.py  tools.py
examples/: demo_minimal.py  eval_pass1.py
